ajustes realizados nas rotas
