# routes/api.php
@@ -23,7 +23,7 @@ Route::post('login', 'App\Http\Controllers\AuthController@login');
 Route::middleware('jwt.auth')->group(function(){
     // Route::apiresource('usuario', 'App\Http\Controllers\UsuarioController');
     Route::apiResource('usuario', 'App\Http\Controllers\UsuarioController');
-    
+    Route::delete('login/{id}', 'App\Http\Controllers\AuthController@destroy');
 });
 
 
