# storage/api-docs/api-docs.json
@@ -43,6 +43,36 @@
                 ]
             }
         },
+        "/api/login/{id}": {
+            "delete": {
+                "tags": [
+                    "login"
+                ],
+                "description": "Desativa Usuário por Id",
+                "operationId": "InativaUsuarioById",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "usuario deletado"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/usuario": {
             "get": {
                 "tags": [
@@ -84,7 +114,7 @@
                                     "name": {
                                         "type": "string"
                                     },
-                                    "cpf": {
+                                    "cpfcnpj": {
                                         "type": "string"
                                     },
                                     "telefone": {
@@ -97,11 +127,14 @@
                                         "type": "string",
                                         "format": "date"
                                     },
-                                    "sexo": {
+                                    "cidade": {
                                         "type": "string"
                                     },
-                                    "ativo": {
-                                        "type": "boolean"
+                                    "bairro": {
+                                        "type": "string"
+                                    },
+                                    "numero": {
+                                        "type": "integer"
                                     },
                                     "perfil_id": {
                                         "type": "integer"
@@ -188,10 +221,7 @@
                                     "name": {
                                         "type": "string"
                                     },
-                                    "nome": {
-                                        "type": "string"
-                                    },
-                                    "cpf": {
+                                    "cpfcnpj": {
                                         "type": "string"
                                     },
                                     "telefone": {
@@ -204,11 +234,14 @@
                                         "type": "string",
                                         "format": "date"
                                     },
-                                    "sexo": {
+                                    "cidade": {
                                         "type": "string"
                                     },
-                                    "ativo": {
-                                        "type": "boolean"
+                                    "bairro": {
+                                        "type": "string"
+                                    },
+                                    "numero": {
+                                        "type": "integer"
                                     },
                                     "perfil_id": {
                                         "type": "integer"
@@ -222,34 +255,6 @@
                 "responses": {
                     "202": {
                         "description": "Successful operation"
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
-            },
-            "delete": {
-                "tags": [
-                    "usuarios"
-                ],
-                "description": "Deleta Usuário por Id",
-                "operationId": "deleteUsuarioById",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "integer",
-                            "format": "int64"
-                        }
-                    }
-                ],
-                "responses": {
-                    "204": {
-                        "description": "usuario deletado"
                     }
                 },
                 "security": [
